<resources>
    <string name="app_name">Bicycle</string>
    <string name="action_share">分享</string>
    <string name="action_theme_1">日间</string>
    <string name="action_theme_2">夜间</string>
    <string name="action_about">关于</string>
    <string name="action_exit">退出</string>
    <string name="copy">车次复制成功！</string>
    <string name="iChina">伏羲六十四卦</string>
    <string name="base_64">Base64</string>
    <string name="morse_code">Morse码</string>
    <string name="error_msg">磁力链格式错误</string>
    <string name="empty_msg">待解码的内容空缺</string>
    <string name="short_url">短链生成</string>
    <string name="endode">解码</string>
    <string name="decode">编码</string>
    <string name="nothing_copy">你想复制啥?_？</string>
    <string name="error_net">网址格式错误</string>
    <string name="sourse_error">格式不匹配</string>
    <string name="about">关于</string>
    <string name="about_1">1.说明：仅支持磁力链</string>
    <string name="about_2">2.本项目想法来源于chrome插件：老司机编码助手。并参考了部分代码套路，在此感谢。\n老司机编码助手作者：@程序员Delton[新浪微博] \n老司机编码助手地址：https://github.com/dsh0416/fast-code</string>
    <string name="about_3">3.感谢开源项目：Android开发人员不得不收集的代码 \n项目地址：https://github.com/Blankj/AndroidUtilCode</string>
    <string name="about_4">4.感谢某小弟提♂供的启动页面切图\nGithub主页:https://github.com/Yzker</string>
    <string name="about_5">5.本软件本软件纯属技术交流，一切后果作者概不负责.</string>
    <string name="about_6">copyfault By Paradoxie</string>

    <string-array name="code">
        <item >伏羲六十四卦</item>
        <item >Base64</item>
        <item >Morse码</item>
    </string-array>

    <string-array name="tips">
        <item>tip:屏幕左右滑动都可以清除文本框里面的内容哈~</item>
        <item>tip:走起走起!开车开车!!</item>
        <item>tip:解码的的时候请注意上面选择的格式哟~</item>
        <item>tip:社会主义核心价值观!</item>
        <item>tip:不要总想搞个大新闻!</item>
        <item>tip:我也很想自带一些车牌号的...但是...不过...</item>
        <item>tip:点击右下角的那个悬浮图标可以直接复制文本框里面的内容呢~</item>
        <item>tip:营养快线+卫生纸????</item>
        <item>tip:我也不晓得这个界面为啥子是这个颜色!</item>
        <item>tip:彩蛋提示:都跟10有关且都需要浏览器跳转打开滴~</item>
        <item>tip:彩蛋提示:其中一个需要科学上网,/嘘~</item>

    </string-array>
</resources>
