<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".UI.MainActivity">
    <item
        android:id="@+id/theme"
        android:orderInCategory="100"
        android:title="@string/action_theme_1"
        app:showAsAction="never"/>
    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never"/>
</menu>
