<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_content"
    android:id="@+id/main_framelayout"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UI.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/code"
            android:padding="20dp"
            android:spinnerMode="dropdown"/>

        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext"
            android:gravity="top"
            android:lines="8"
            android:padding="10dp"
            android:scrollbars="vertical"/>

        <LinearLayout
            android:id="@+id/double_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/et_code"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_explain"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:gravity="center"
                android:text="@string/endode"/>

            <Button
                android:id="@+id/btn_translate"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:gravity="center"
                android:text="@string/decode"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_url"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/double_btn"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edittext"
            android:gravity="center"
            android:text="@string/short_url"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

</FrameLayout>
